--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,12 @@
         android:text="Open next fragment in backstack"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:text="Close activity"
+        android:layout_height="wrap_content" />
+
     <FrameLayout
         android:id="@+id/root_content"
         android:layout_width="match_parent"
