--- a/sample/src/main/res/layout/fragment_empty.xml
+++ b/sample/src/main/res/layout/fragment_empty.xml
@@ -3,8 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:layout_height="match_parent">
 
     <TextView
         android:text="Test"
