Code cleanup (Lint checks)

--- a/sample/src/main/res/layout/fragment_empty.xml
+++ b/sample/src/main/res/layout/fragment_empty.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:text="Test"
+        android:text="@string/empty_fragment_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
