Update sample app. Add unit test. (+8 squashed commits) Squashed commits: [6769c2f] Remove reflection, add viewmodel factory [74ba8ee] Add annotations and cleanup code [6bb6bf1] Revert "Replace reflection with IViewModelFactory. Update sample."
This reverts commit d9156c58fe0144361af7d71085f4471bc72470ba.
[42824fa] Revert "Remove unused import."

This reverts commit 9ea61c5eba772b15e815b289cf1e31856bd6dcbd.
[9ea61c5] Remove unused import.
[d9156c5] Replace reflection with IViewModelFactory. Update sample.
[956b8a0] Bump version to 1.0.1
[7c95a1b] Update dependencies

--- a/sample/src/main/res/layout/fragment_userlist.xml
+++ b/sample/src/main/res/layout/fragment_userlist.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
 
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+	<ListView
+		android:id="@android:id/list"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
+	</ListView>
 
-    <LinearLayout
-        android:id="@android:id/progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical"
-        android:visibility="gone">
+	<LinearLayout
+		android:id="@android:id/progress"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_centerInParent="true"
+		android:orientation="vertical"
+		android:visibility="gone">
 
-        <ProgressBar
-            style="@style/Widget.AppCompat.ProgressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+		<ProgressBar
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center"
+			style="@style/Widget.AppCompat.ProgressBar" />
 
-        <TextView
-            android:id="@+id/progress_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+		<TextView
+			android:id="@+id/progress_text"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center" />
 
-    </LinearLayout>
+	</LinearLayout>
 
 
 </RelativeLayout>
