--- a/sample/src/main/res/layout/view_header_info.xml
+++ b/sample/src/main/res/layout/view_header_info.xml
@@ -1,31 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp"
-    android:background="#cce2ed">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/header_text"/>
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/header_text" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="match_parent"
-        android:text="@string/userlist_open_next_fragment"
-        android:layout_height="wrap_content" />
+	<Button
+		android:id="@+id/button1"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="@string/userlist_open_next_fragment" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:text="@string/userlist_close_activity"
-        android:layout_height="wrap_content" />
+	<Button
+		android:id="@+id/button2"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="@string/userlist_close_activity" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:text="@string/userlist_open_fragment_pager"
-        android:layout_height="wrap_content" />
+	<Button
+		android:id="@+id/button3"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="@string/userlist_open_fragment_pager" />
 
-</LinearLayout>
+</merge>
