Add databinding support
Base support for binding

Add sample with simple binding

Code cleaning

Cleaning code - removing unnecessary helpers

Add cast exception

Add annotatoins, code cleaning and refactoring

Remove implementation of getViewModelBindingConfig from ViewModelBaseFragment

--- a/sample/src/main/res/layout/fragment_userlist.xml
+++ b/sample/src/main/res/layout/fragment_userlist.xml
@@ -9,6 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+
+    <Button
+        android:id="@+id/open_binding_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Open Binding Test Fragment" />
+
     <LinearLayout
         android:id="@android:id/progress"
         android:layout_width="wrap_content"
